--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 include Makefile
-include tests/general.py
+include tests/__init__.py
+include tests/test_EI.py
+include tests/test_helpers.py
+include tests/test_loads.py
 include README.rst
-
