--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 classifiers = [
    'Development Status :: 5 - Production/Stable', 'Environment :: Console',
    'Intended Audience :: End Users/Desktop', 'Intended Audience :: Manufacturing',
-   'License :: OSI Approved :: BSD License', 'Operating System :: OS Independent',
+   'License :: OSI Approved :: MIT License', 'Operating System :: OS Independent',
    'Programming Language :: Python :: 3', 'Topic :: Scientific/Engineering'
 ]
 
